# purple

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  compare.sh  out.txt  run.sh  t.txt
.github/workflows/: rust.yml
src/: bitboard.rs  board.rs  board_state.rs  castle.rs  chess_move.rs  common.rs  components.rs  constants.rs  fen.rs  game.rs  gamestate.rs  lib.rs  magic.rs  main.rs  move_gen.rs  movegen.rs  out.txt  p_move.rs  piece.rs  player.rs  position.rs  search.rs  square.rs  table.rs  uci.rs
src/board_state/: board.rs  castle.rs  fen.rs  movegen.rs  player.rs  position.rs
src/common/: bitboard.rs  chess_move.rs  eval_move.rs  lookup.rs  piece.rs  square.rs  stats.rs
src/components/: bitboard.rs  chess_move.rs  piece.rs  square.rs
src/magic/: constants.rs  magic.rs  magicgen.rs  random.rs  search.rs  util.rs
src/move_gen/: generator.rs  kinggen.rs  knightgen.rs  legal.rs  lookup.rs  movegen.rs  moves.rs  pawngen.rs  pawns.rs  perft.rs  slider.rs  util.rs
src/search/: alpha_beta.rs  alpha_beta_neg.rs  alpha_beta_table.rs  eval.rs  eval_move.rs  minimax.rs  minimax_table.rs  par_minimax.rs  par_minimax_table.rs  search.rs  stats.rs
src/table/: transposition.rs  zobrist.rs
src/uci/: interface.rs
tests/: lib.rs
util/: board.py  out.txt  out1.txt  out2.txt  out3.txt
