[package]
name = "purple"
version = "0.1.0"
authors = ["Joshua Ervin <ervin.josh17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rand = "0.8.3"
rayon = "1.5.0"

[profile.release]
opt-level = 3
