[package]
name = "purple"
version = "0.1.0"
authors = ["Joshua Ervin <ervin.josh17@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["chess", "engine", "move-generator"]
categories = ["game-engines"]
description = "A UCI chess engine"
homepage = "https://github.com/jlervin/purple"
repository = "https://github.com/jlervin/purple/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
itertools = "0.10.0"
rand = "0.8.3"
rayon = "1.5.0"
bitintr = "0.3.0"

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
codegen-units = 1
panic = "abort"

[lib]
name = "purple"
path = "src/lib.rs"

[[bin]]
name = "purple"
path = "src/main.rs"
